# adk-langchain-journey

./: .gitignore  ADK_README.md  CONCEPTS_README.md  LANGCHAIN_README.md  README.md  adk_app.py  adk_learning_roadmap.md.resolved  adk_level12_advanced.py  adk_requirements.txt  check_session.py  langchain_roadmap.md.resolved  lc_app.py  lc_level12_advanced.py  lc_level2_prompts.py  lc_level5_callbacks.py  lc_level6_multiagent.py  lc_level7_workflows.py  lc_level8_state.py  lc_level9_rag.py  lc_requirements.txt  main.py  mcp_server.py  products.db  pyproject.toml  setup_adk.ps1  setup_adk.sh  setup_langchain.ps1  setup_langchain.sh  traceback.txt
adk_labs/: __init__.py
adk_level10_production/: agent.py
adk_level12_hitl/: agent.py
adk_level3_tools/: agent.py
adk_level4_guardrails/: agent.py
adk_level7_workflows/: agent.py
adk_level8_state/: agent.py
adk_level9_rag/: agent.py
adk_streamlit_labs/: __init__.py  level01_basic.py  level02_prompts.py  level03_tools.py  level04_guardrails.py  level05_callbacks.py  level06_multiagent.py  level07_workflows.py  level08_state.py  level09_rag.py  level10_production.py  level11_mcp.py  level12_hitl.py
company_hub/: agent.py
content_pipeline/: agent.py
gemini_assistant/: agent.py
grounded_assistant/: agent.py
guarded_assistant/: agent.py
hr_assistant/: agent.py
human_in_loop/: agent.py
langchain_labs/: __init__.py  adk_level12_comparison.py  lc_level10_production.py  lc_level11_langsmith.py  lc_level13_timetravel.py  lc_level14_mcp.py  lc_level1_basic.py  lc_level3_tools.py  lc_level4_guardrails.py
(+17 files in other folders)
