[project]
name = "adk-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "google-adk>=1.26.0",
    "google-cloud-aiplatform>=1.140.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "pydantic>=2.12.5",
    "uvicorn>=0.41.0",
]
